[package]
name = "azulrs"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
termion = "*"
derive_builder = "*"
pretty_assertions = "*"
test-case = "2.0.0-rc1"
indextree = "^4.4"

[dev-dependencies]
